2016-05-20  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-489
	
	* src/quantum.h:  Changed from "Hund" to "Hund : Index".  Relying
	on Hudson to test if this works because it compiles locally, just
	as the last commit did?  If this fix does not work, then I will
	declare specific integers in quantum.h instead.

2016-05-20  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-488
	
	This update requires updating zeeman_constants.xml in arts-xml-data.
	Found bug in implementation for NO.  Should be fixed now following
	Berdyugina and Solanki's 2002 paper.
	
	Note:  This only works from a catalog that defines quantum numbers 
	that we can understand.  Reading HITRAN presently does not work for
	NO because the quantum numbers are not well-represented.  The 
	rules in the 2004 paper seems to not be work outside some limited
	frequnecy regions.  So this is disabled and you have to set
	the quantum numbers by hand if you use HITRAN.  (Or reenable it in 
	quantum_parser_hitran for testing if your freqeuncy region works as
	expected.  Just remember to disable this before committing any code
	updates...)
	
	* src/m_zeeman.cc: Updated propmat_clearskyAddZeeman to just copy
	behavior of the preferable propmat_clearskyAddZeemanFromPreCalc,
	but slower by repetition.  Should probably deprecate this instead...
	
	Updated the other functions to remove a multitude of if-statements 
	and writing of quantum numbers directly to the Zeeman linerecords.
	
	* src/quantum.{cc,h}: Added a flag for hund case and a Lambda as 
	a quantum number.
	
	* src/rational.{cc,h}:  Updated handling of toIndex() for 
	half-integers.  2/2 failed before but is clearly an integer.
	
	* src/zeeman.{cc,h}:  Added the error handling of 
	isotopologue_quantum.  The change in zeeman_constants.xml
	showed me there was no error handling whatsoever other than
	"is it defined?".  Removed old frequnecy_change function
	handler for different Hund cases and moved this functionality